--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "formidable": "^3.5.0",
     "next": "^13.1.1",
-    "openai": "^3.1.0",
+    "openai": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "engines": {
     "node": ">=14.6.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.3.3",
+    "@types/react": "18.2.14",
+    "typescript": "5.1.6"
   }
 }
